--- a/public/css/main.css
+++ b/public/css/main.css
@@ -232,6 +232,21 @@ form {
   color: white;
 }
 
+.user-message {
+  margin: auto;
+  width: 90%;
+  border: 1px solid cornflowerblue;
+  border-radius: 3px;
+  padding: 1rem;
+  background-color: lightskyblue;
+  text-align: center;
+}
+
+.user-message--error {
+  border-color: indianred;
+  background: lightcoral;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
@@ -239,5 +254,9 @@ form {
 
   #side-menu-toggle {
     display: none;
+  }
+
+  user-message {
+    width: 30rem;
   }
 }
